<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="#F7F7F7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/settings_go_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_arrow_upward"
            app:tint="@color/text_dark_color"
            android:rotation="-90"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="@color/text_dark_color"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_saving"
                    android:textStyle="bold"
                    android:textColor="@color/purple_theme_color"
                    android:textSize="15sp"
                    android:layout_marginStart="25dp"/>

                <LinearLayout
                    android:id="@+id/settings_load_item_images_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/load_item_images"
                        android:textColor="#2B2A2A"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/settings_load_item_images_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_menu"
                    android:textStyle="bold"
                    android:textColor="@color/purple_theme_color"
                    android:textSize="15sp"
                    android:layout_marginStart="25dp"/>

                <LinearLayout
                    android:id="@+id/settings_menu_mode_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/menu_mode"
                        android:textColor="#2B2A2A"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/settings_menu_mode_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offline"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settings_update_menu_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/update_menu"
                        android:textColor="#2B2A2A"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_the_latest_food_menu_for_offline"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settings_delete_menu_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/delete_menu"
                        android:textColor="#2B2A2A"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_all_the_menu_items_from_offline_data"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_details"
                    android:textStyle="bold"
                    android:textColor="@color/purple_theme_color"
                    android:textSize="15sp"
                    android:layout_marginStart="25dp"/>

                <LinearLayout
                    android:id="@+id/settings_saved_cards_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/delete_saved_cards"
                        android:textColor="#2B2A2A"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_all_the_saved_cards"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settings_delete_order_history_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/delete_orders_history"
                        android:textColor="#2B2A2A"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_all_the_previous_orders_details"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textStyle="bold"
                    android:textColor="@color/purple_theme_color"
                    android:textSize="15sp"
                    android:layout_marginStart="25dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/app_version"
                        android:textColor="#2B2A2A"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/app_version_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version_number"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/developer"
                        android:textColor="#2B2A2A"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer_name"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>