<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_password_2"
        android:contentDescription="@string/forgot_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Forgot"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="@color/purple_theme_color"
        android:fontFamily="@font/montserrat_semi_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="@color/purple_theme_color"
        android:fontFamily="@font/montserrat_semi_bold"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:text="Please provide your registered Email address to Reset your Password"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/forgot_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text" />

    <Button
        android:id="@+id/forgot_send_link_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="Send Reset Link"/>

</LinearLayout>